--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap');
+
 body {
-    font-family: 'Monospace', 'Arial';
+    font-family: 'Poppins', sans-serif;
     background: url('https://wallpaperaccess.com/full/42613.jpg');
     background-repeat: no-repeat;
     background-size: cover;
